# stylus-testing-example

./: .env-sample  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
examples/: vending_machine.rs
src/: lib.rs  librs  main.rs
tests/: vending_machine_tests.rs
